Edit the add_numbers_post example to include a description on the web page.

--- a/project/templates/mako/add_numbers_post.html
+++ b/project/templates/mako/add_numbers_post.html
@@ -1,6 +1,6 @@
 <%inherit file="base.html"/>
 <%block name="page_title">Add numbers POST</%block>
-
+<p>Small demo of using forms with POST data and mako templating</p>
 % if value:
 <h1>${value}</h1>
 % else:
